[gd_scene load_steps=68 format=1]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://textures/Animations.tex" type="Texture" id=2]
[ext_resource path="res://animations/walk.tres" type="Animation" id=3]
[ext_resource path="res://animations/idle.tres" type="Animation" id=4]
[ext_resource path="res://animations/jump.tres" type="Animation" id=5]
[ext_resource path="res://images/PotionDrinks/DrinkGreen_00.png" type="Texture" id=6]
[ext_resource path="res://images/PotionDrinks/DrinkGreen_01.png" type="Texture" id=7]
[ext_resource path="res://images/PotionDrinks/DrinkGreen_02.png" type="Texture" id=8]
[ext_resource path="res://images/PotionDrinks/DrinkGreen_03.png" type="Texture" id=9]
[ext_resource path="res://images/PotionDrinks/DrinkGreen_04.png" type="Texture" id=10]
[ext_resource path="res://images/PotionDrinks/DrinkGreen_05.png" type="Texture" id=11]
[ext_resource path="res://images/PotionDrinks/DrinkGreen_06.png" type="Texture" id=12]
[ext_resource path="res://images/PotionDrinks/DrinkGreen_07.png" type="Texture" id=13]
[ext_resource path="res://images/PotionDrinks/DrinkGreen_08.png" type="Texture" id=14]
[ext_resource path="res://images/PotionDrinks/DrinkGreen_09.png" type="Texture" id=15]
[ext_resource path="res://images/PotionDrinks/DrinkGreen_10.png" type="Texture" id=16]
[ext_resource path="res://images/PotionDrinks/DrinkGreen_11.png" type="Texture" id=17]
[ext_resource path="res://images/PotionDrinks/DrinkPurple_00.png" type="Texture" id=18]
[ext_resource path="res://images/PotionDrinks/DrinkPurple_01.png" type="Texture" id=19]
[ext_resource path="res://images/PotionDrinks/DrinkPurple_02.png" type="Texture" id=20]
[ext_resource path="res://images/PotionDrinks/DrinkPurple_03.png" type="Texture" id=21]
[ext_resource path="res://images/PotionDrinks/DrinkPurple_04.png" type="Texture" id=22]
[ext_resource path="res://images/PotionDrinks/DrinkPurple_05.png" type="Texture" id=23]
[ext_resource path="res://images/PotionDrinks/DrinkPurple_06.png" type="Texture" id=24]
[ext_resource path="res://images/PotionDrinks/DrinkPurple_07.png" type="Texture" id=25]
[ext_resource path="res://images/PotionDrinks/DrinkPurple_08.png" type="Texture" id=26]
[ext_resource path="res://images/PotionDrinks/DrinkPurple_09.png" type="Texture" id=27]
[ext_resource path="res://images/PotionDrinks/DrinkPurple_10.png" type="Texture" id=28]
[ext_resource path="res://images/PotionDrinks/DrinkPurple_11.png" type="Texture" id=29]
[ext_resource path="res://images/PotionDrinks/DrinkYellow_00.png" type="Texture" id=30]
[ext_resource path="res://images/PotionDrinks/DrinkYellow_01.png" type="Texture" id=31]
[ext_resource path="res://images/PotionDrinks/DrinkYellow_02.png" type="Texture" id=32]
[ext_resource path="res://images/PotionDrinks/DrinkYellow_03.png" type="Texture" id=33]
[ext_resource path="res://images/PotionDrinks/DrinkYellow_04.png" type="Texture" id=34]
[ext_resource path="res://images/PotionDrinks/DrinkYellow_05.png" type="Texture" id=35]
[ext_resource path="res://images/PotionDrinks/DrinkYellow_06.png" type="Texture" id=36]
[ext_resource path="res://images/PotionDrinks/DrinkYellow_07.png" type="Texture" id=37]
[ext_resource path="res://images/PotionDrinks/DrinkYellow_08.png" type="Texture" id=38]
[ext_resource path="res://images/PotionDrinks/DrinkYellow_09.png" type="Texture" id=39]
[ext_resource path="res://images/PotionDrinks/DrinkYellow_10.png" type="Texture" id=40]
[ext_resource path="res://images/PotionDrinks/DrinkYellow_11.png" type="Texture" id=41]
[ext_resource path="res://images/PotionDrinks/DrinkRed_00.png" type="Texture" id=42]
[ext_resource path="res://images/PotionDrinks/DrinkRed_01.png" type="Texture" id=43]
[ext_resource path="res://images/PotionDrinks/DrinkRed_02.png" type="Texture" id=44]
[ext_resource path="res://images/PotionDrinks/DrinkRed_03.png" type="Texture" id=45]
[ext_resource path="res://images/PotionDrinks/DrinkRed_04.png" type="Texture" id=46]
[ext_resource path="res://images/PotionDrinks/DrinkRed_05.png" type="Texture" id=47]
[ext_resource path="res://images/PotionDrinks/DrinkRed_06.png" type="Texture" id=48]
[ext_resource path="res://images/PotionDrinks/DrinkRed_07.png" type="Texture" id=49]
[ext_resource path="res://images/PotionDrinks/DrinkRed_08.png" type="Texture" id=50]
[ext_resource path="res://images/PotionDrinks/DrinkRed_09.png" type="Texture" id=51]
[ext_resource path="res://images/PotionDrinks/DrinkRed_10.png" type="Texture" id=52]
[ext_resource path="res://images/PotionDrinks/DrinkRed_11.png" type="Texture" id=53]
[ext_resource path="res://images/Shocked/Shocked_0.png" type="Texture" id=54]
[ext_resource path="res://images/Shocked/Shocked_1.png" type="Texture" id=55]
[ext_resource path="res://images/Shocked/Shocked_2.png" type="Texture" id=56]
[ext_resource path="res://images/Shocked/Shocked_3.png" type="Texture" id=57]
[ext_resource path="res://images/Shocked/Shocked_4.png" type="Texture" id=58]
[ext_resource path="res://images/Shocked/Shocked_5.png" type="Texture" id=59]
[ext_resource path="res://images/Shocked/Shocked_6.png" type="Texture" id=60]
[ext_resource path="res://Sounds/cloth.smp" type="Sample" id=61]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 9.16898
height = 19.3371

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10.1825, 13.3564 )

[sub_resource type="Animation" id=3]

resource/name = "Dead"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("SamplePlayer:play/play")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 2,
"values": [ "" ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("SamplePlayer:play/play")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 2,
"values": [ "" ]
}

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "DrinkGreen",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "DrinkPurple",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "DrinkYellow",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ) ],
"loop": true,
"name": "DrinkRed",
"speed": 5.0
}, {
"frames": [ ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ) ],
"loop": true,
"name": "Shocked",
"speed": 11.0
} ]

[sub_resource type="SampleLibrary" id=6]

samples/walk = {
"db": -12.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 61 )
}

[node name="Player" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -0.0142059, 1.69189 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
WALK_SPEED = 10
JUMP_SPEED = 130
GRAVITY = 500

[node name="FBHitBox" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.249356, -3.33955 )
shapes/0/trigger = true
space_override = 1
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FBHitBox"]

transform/pos = Vector2( 0.249356, -3.33955 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 7
hframes = 5
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -0.0142059, 1.69189 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="rayFloor" type="RayCast2D" parent="."]

transform/pos = Vector2( -4.86161, 19.7501 )
enabled = true
cast_to = Vector2( 0, 2 )
layer_mask = 1
type_mask = 15

[node name="rayFloor1" type="RayCast2D" parent="."]

transform/pos = Vector2( 2.41243, 20.3169 )
enabled = true
cast_to = Vector2( 0, 2 )
layer_mask = 1
type_mask = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Dead = SubResource( 3 )
anims/Walk = ExtResource( 3 )
anims/drinking = SubResource( 4 )
anims/idle = ExtResource( 4 )
anims/jump = ExtResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="rayWall" type="RayCast2D" parent="."]

transform/pos = Vector2( 4.55374, 3.42784 )
enabled = true
cast_to = Vector2( 5, 0 )
layer_mask = 1
type_mask = 15

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.5, 0.5 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 2.15806, -0.00918198 )
frames = SubResource( 5 )
animation = "DrinkRed"

[node name="TellaportTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.75
one_shot = true
autostart = false

[node name="PowerUpTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 10.0
one_shot = true
autostart = false

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 6 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_finished"]

[connection signal="timeout" from="TellaportTimer" to="." method="_on_TellaportTimer_timeout"]

[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]


